fixed alphabet letters spacing to allow more letters

--- a/htdocs/t/default.css
+++ b/htdocs/t/default.css
@@ -113,7 +113,7 @@ label{display:block;}
 
 .b-title h1,
 .b-title h2{font-size:20px;margin-left:-1px;}
-.b-title #spotlighted {position:absolute;right:0;bottom:15px;font-size:110%; width:15px; height: 21px; background:transparent url(/t/icon/warming.png) no-repeat;}
+.b-title #spotlighted {position:absolute;right:0;bottom:15px;font-size:110%; width:21px; height: 21px; background:transparent url(/t/icon/spotlighted.png) no-repeat;}
 .b-title #photographer {display:block; position:absolute;right:0;bottom:6px;width:40px; height: 33px; background:transparent url(/t/icon/camera.png) no-repeat;}
 .b-title .hrefs {position:absolute; right:0; bottom:15px; font-size:110%;}
 .b-search{float:left;margin-right:2em;width:14em;}
@@ -153,7 +153,7 @@ label{display:block;}
 #search_by_letter a {text-decoration:none; color:#fff; font-size: 14px;}
 #letters_all{float:left; width: 40px; text-align:center;}
 #alphabetical-ru {float:right; width:510px; margin-top:2px;}
-#alphabetical-ru a {margin-right: 3px; float:left; display:block; width:18px; height: 18px; line-height:15px; text-align:center; padding-left:1px;}
+#alphabetical-ru a {margin-right: 2px; float:left; display:block; width:18px; height: 18px; line-height:15px; text-align:center; padding-left:1px;}
 #alphabetical-ru a.selected-button {background:url(/t/bg/blocks/letter-hi-bg.png);  color: #ec118f; }
 
 .autocomplete { font-size:12px; position:absolute; background-color:#FFFFFF; color:#000000; border:#000000 solid; border-width:0px 1px 1px 1px; padding:2px; z-index:1; display:none; }
